--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ on:
         required: false
         default: '测试2.txt'
 jobs:
-  upload_download_delete:
+  release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -49,6 +49,7 @@ jobs:
         
     - name: Test create release
       id: create_release
+      if: ${{ inputs.gitee_release_id == ''}}
       uses: ./
       with:
         gitee_owner: ${{ inputs.gitee_owner }}
@@ -65,13 +66,29 @@ jobs:
           test2
           test3
           
-    - name: Test upload file to exist release
+    - name: Test upload file to exist release - using last step id
+      if: ${{ inputs.gitee_release_id == ''}}
       uses: ./
       with:
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
-        release_id: ${{ steps.create_release.outputs.release_id }}
+        gitee_release_id: ${{ steps.create_release.outputs.release_id }}
+        gitee_file_name: ${{ inputs.gitee_file_name_new }}
+        gitee_file_path: ${{ inputs.gitee_file_path }}
+        test_array: |
+          test21
+          test22
+          test23
+          
+    - name: Test upload file to exist release - using id from inputs
+      if: ${{ inputs.gitee_release_id != ''}}
+      uses: ./
+      with:
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_release_id: ${{ inputs.gitee_release_id }}
         gitee_file_name: ${{ inputs.gitee_file_name_new }}
         gitee_file_path: ${{ inputs.gitee_file_path }}
         test_array: |
