--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,12 @@ on:
         required: false
         default: Test v1.0
         
+      test_multi_files:
+        description: '测试多文件'
+        required: false
+        type: boolean
+        default: true
+        
       gitee_file_name:
         description: '上传的附件名称'
         required: false
@@ -47,9 +53,9 @@ jobs:
       with:
         ref: ${{ github.event.ref }}
         
-    - name: Test create release
+    - name: Test create release(Single file)
       id: create_release
-      if: ${{ inputs.gitee_release_id == ''}}
+      if: ${{ inputs.gitee_release_id == '' && inputs.test_multi_files == 'false' }}
       uses: ./
       with:
         gitee_owner: ${{ inputs.gitee_owner }}
@@ -61,13 +67,26 @@ jobs:
         gitee_target_commitish: master
         gitee_file_name: ${{ inputs.gitee_file_name }}
         gitee_file_path: ${{ inputs.gitee_file_path }}
-        test_array: |
-          test1
-          test2
-          test3
           
-    - name: Test upload file to exist release - using last step id
-      if: ${{ inputs.gitee_release_id == ''}}
+    - name: Test create release(Multi file)
+      id: create_release
+      if: ${{ inputs.gitee_release_id == '' && inputs.test_multi_files == 'true' }}
+      uses: ./
+      with:
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_tag_name: ${{ inputs.gitee_tag_name }}
+        gitee_release_name: ${{ inputs.gitee_release_name }}
+        gitee_release_body: 'Gitee release 描述'
+        gitee_target_commitish: master
+        gitee_files: |
+          LICENSE
+          requirements.txt
+          .github/workflows/test.yml
+          
+    - name: Test upload single file to exist release - using last step id
+      if: ${{ inputs.gitee_release_id == '' && inputs.test_multi_files == 'false' }}
       uses: ./
       with:
         gitee_owner: ${{ inputs.gitee_owner }}
@@ -76,13 +95,22 @@ jobs:
         gitee_release_id: ${{ steps.create_release.outputs.release-id }}
         gitee_file_name: ${{ inputs.gitee_file_name_new }}
         gitee_file_path: ${{ inputs.gitee_file_path }}
-        test_array: |
-          test21
-          test22
-          test23
           
-    - name: Test upload file to exist release - using id from inputs
-      if: ${{ inputs.gitee_release_id != ''}}
+    - name: Test upload multi file to exist release - using last step id
+      if: ${{ inputs.gitee_release_id == '' && inputs.test_multi_files == 'true' }}
+      uses: ./
+      with:
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_release_id: ${{ steps.create_release.outputs.release-id }}
+        gitee_files: |
+          LICENSE
+          requirements.txt
+          .github/workflows/test.yml
+          
+    - name: Test upload single file to exist release - using id from inputs
+      if: ${{ inputs.gitee_release_id != '' && inputs.test_multi_files == 'false' }}
       uses: ./
       with:
         gitee_owner: ${{ inputs.gitee_owner }}
@@ -91,8 +119,16 @@ jobs:
         gitee_release_id: ${{ inputs.gitee_release_id }}
         gitee_file_name: ${{ inputs.gitee_file_name_new }}
         gitee_file_path: ${{ inputs.gitee_file_path }}
-        test_array: |
-          test21
-          test22
-          test23
         
+    - name: Test upload multi file to exist release - using id from inputs
+      if: ${{ inputs.gitee_release_id != '' && inputs.test_multi_files == 'true' }}
+      uses: ./
+      with:
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_release_id: ${{ inputs.gitee_release_id }}
+        gitee_files: |
+          LICENSE
+          requirements.txt
+          .github/workflows/test.yml
