--- a/action.yml
+++ b/action.yml
@@ -66,9 +66,8 @@ runs:
         gitee_file_path: ${{ inputs.gitee_file_path }}
         gitee_release_id: ${{ inputs.gitee_release_id }}
       run: |
-        cd ${{ github.action_path }}
-        pip install -r requirements.txt
-        python gitee_release.py
+        pip install -r ${{ github.action_path }}/requirements.txt
+        python ${{ github.action_path }}/gitee_release.py
 
 # Ref: https://haya14busa.github.io/github-action-brandings/
 branding:
