--- a/.github/workflows/test_real.yml
+++ b/.github/workflows/test_real.yml
@@ -70,6 +70,7 @@ jobs:
       if: ${{ inputs.gitee_release_id == '' && github.event.inputs.test_multi_files == 'false' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: create_release
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -86,6 +87,7 @@ jobs:
       if: ${{ inputs.gitee_release_id == '' && github.event.inputs.test_multi_files == 'true' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: create_release
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -102,6 +104,7 @@ jobs:
       if: ${{ inputs.gitee_release_id == '' && github.event.inputs.test_multi_files == 'false' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: upload_asset
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -114,6 +117,7 @@ jobs:
       if: ${{ inputs.gitee_release_id == '' && github.event.inputs.test_multi_files == 'true' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: upload_asset
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -127,6 +131,7 @@ jobs:
       if: ${{ inputs.gitee_release_id != '' && github.event.inputs.test_multi_files == 'false' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: upload_asset
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -139,6 +144,7 @@ jobs:
       if: ${{ inputs.gitee_release_id != '' && github.event.inputs.test_multi_files == 'true' }}
       uses: nicennnnnnnlee/action-gitee-release@master
       with:
+        gitee_action: upload_asset
         gitee_owner: ${{ inputs.gitee_owner }}
         gitee_repo: ${{ inputs.gitee_repo }}
         gitee_token: ${{ inputs.gitee_token }}
@@ -147,3 +153,36 @@ jobs:
         gitee_files: |
           ./test_dir/test*.txt
           ./test_dir/test*.md
+
+    - name: Test delete release by tag
+      if: ${{ github.event.inputs.test_multi_files == 'true' }}
+      uses: nicennnnnnnlee/action-gitee-release@master
+      with:
+        gitee_action: delete_release
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_tag_name: ${{ inputs.gitee_tag_name }}
+
+    - name: Test delete asset by tag and name
+      if: ${{ github.event.inputs.test_multi_files == 'true' }}
+      uses: nicennnnnnnlee/action-gitee-release@master
+      with:
+        gitee_action: delete_asset
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_tag_name: ${{ inputs.gitee_tag_name }}
+        gitee_delete_assets: 测试文件1.txt
+
+    - name: Test update asset by tag and old name
+      if: ${{ github.event.inputs.test_multi_files == 'true' }}
+      uses: nicennnnnnnlee/action-gitee-release@master
+      with:
+        gitee_action: update_asset
+        gitee_owner: ${{ inputs.gitee_owner }}
+        gitee_repo: ${{ inputs.gitee_repo }}
+        gitee_token: ${{ inputs.gitee_token }}
+        gitee_tag_name: ${{ inputs.gitee_tag_name }}
+        gitee_old_asset_name: 测试文件1.txt
+        gitee_new_file_path: ./test_dir/test_file4.md
